syntax ="proto3";
//package protos;
import "google/protobuf/timestamp.proto";

message Attachment {

 int32 id=1;
 string type=2;
 string title=3;
 int32 userId=4;
 string forType=5;
 optional google.protobuf.Timestamp created_at = 6;
 optional google.protobuf.Timestamp updated_at = 7;
 
}

message CreateAttachReq {
  int32 userId=1;
  Attachment attachment=2;
}

message CreateAttachRes{
 Attachment attachment=1;
}

message GetAllAttachReq {
 optional int32 entityId=1;
}

message GetAllAttachRes {
 repeated Attachment attachments=1;
 
}

service AttachmentService {
  rpc create(CreateAttachReq) returns(
  CreateAttachRes);
  rpc all(GetAllAttachReq) returns (GetAllAttachRes);
}
